Fixed title spill and other mobile issues

--- a/style-contact.css
+++ b/style-contact.css
@@ -1,6 +1,7 @@
 #social-media-links {
 	display: flex;
 	justify-content: center;
+	flex-wrap: wrap;
 }
 
 #social-media-links img {
