--- a/style-resume.css
+++ b/style-resume.css
@@ -9,3 +9,12 @@ embed {
 	width: 100%;
 	height: 1200px;
 }
+
+.errorBox {
+	position: absolute;
+	top: 300px;
+	left: 50px;
+	right: 50px;
+	max-width: 2000px;
+	z-index: -1;
+}
