--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ h1{
 	max-width: 100%;
 }
 
+@media only screen and (max-width: 500px) {
+	h1 {
+		font-size: 2em;
+	}
+}
+
 .navbar {
 	background: black;
 }
